--- a/views/views.xml
+++ b/views/views.xml
@@ -12,6 +12,8 @@
           />
           <field name="dob" />
           <field name="age" />
+          <!-- <field name="gender" />
+          <field name="address" /> -->
           <field name="diseases" />
           <field name="staff_id" />
 
@@ -32,6 +34,8 @@
               class="oe_avatar"
                />
               <field name="dob" />
+              <!-- <field name="gender" />
+              <field name="address" /> -->
               <field name="age" readonly="1" />
               <field name="diseases" />
               <field name="staff_id" />
@@ -50,6 +54,8 @@
           <field name="name" />
           <field name="dob" />
           <field name="age" />
+          <!-- <field name="address" />
+          <field name="gender" /> -->
           <field name="entry_time" widget="float_time"/>
           <field name="exit_time" widget="float_time"/>
           <field name="patient_assigned" />
@@ -67,6 +73,8 @@
               <field name="name" />
               <field name="dob" />
               <field name="age" readonly="1" />
+              <!-- <field name="address" />
+          <field name="gender" /> -->
               <field name="entry_time" widget="float_time"/>
                <field name="exit_time" widget="float_time"/>
               <field name="patient_assigned" readonly="1" />
@@ -84,6 +92,8 @@
           <field name="name" />
           <field name="dob" />
           <field name="age" />
+          <!-- <field name="address" />
+          <field name="gender" /> -->
           <field name="speciality" />
         </tree>
       </field>
@@ -99,6 +109,8 @@
               <field name="name" />
               <field name="dob" />
               <field name="age" readonly="1" />
+              <!-- <field name="address" />
+          <field name="gender" /> -->
               <field name="speciality" />
               <!-- <field name="patient_assigned" /> -->
             </group>
@@ -116,6 +128,8 @@
           <field name="pat_id" />
           <field name="doc_id" />
           <field name="time" widget="float_time"/>
+          <field name="discription" />
+          <field name="amount" />
           <field name="staatus" />
         </tree>
       </field>
@@ -131,6 +145,8 @@
               <field name="pat_id" />
               <field name="doc_id" />
               <field name="time" widget="float_time"/>
+              <field name="discription" />
+              <field name="amount" />
               <field name="staatus" />
               <!-- <field name="patient_assigned" /> -->
             </group>
