--- a/views/views.xml
+++ b/views/views.xml
@@ -12,8 +12,8 @@
           />
           <field name="dob" />
           <field name="age" />
-          <!-- <field name="gender" />
-          <field name="address" /> -->
+          <field name="gender" />
+          <field name="address" />
           <field name="diseases" />
           <field name="staff_id" />
 
@@ -34,8 +34,8 @@
               class="oe_avatar"
                />
               <field name="dob" />
-              <!-- <field name="gender" />
-              <field name="address" /> -->
+              <field name="gender" />
+              <field name="address" />
               <field name="age" readonly="1" />
               <field name="diseases" />
               <field name="staff_id" />
@@ -54,8 +54,8 @@
           <field name="name" />
           <field name="dob" />
           <field name="age" />
-          <!-- <field name="address" />
-          <field name="gender" /> -->
+          <field name="address" />
+          <field name="gender" />
           <field name="entry_time" widget="float_time"/>
           <field name="exit_time" widget="float_time"/>
           <field name="patient_assigned" />
@@ -73,8 +73,8 @@
               <field name="name" />
               <field name="dob" />
               <field name="age" readonly="1" />
-              <!-- <field name="address" />
-          <field name="gender" /> -->
+              <field name="address" />
+          <field name="gender" />
               <field name="entry_time" widget="float_time"/>
                <field name="exit_time" widget="float_time"/>
               <field name="patient_assigned" readonly="1" />
@@ -92,8 +92,8 @@
           <field name="name" />
           <field name="dob" />
           <field name="age" />
-          <!-- <field name="address" />
-          <field name="gender" /> -->
+          <field name="address" />
+          <field name="gender" />
           <field name="speciality" />
         </tree>
       </field>
@@ -109,8 +109,8 @@
               <field name="name" />
               <field name="dob" />
               <field name="age" readonly="1" />
-              <!-- <field name="address" />
-          <field name="gender" /> -->
+              <field name="address" />
+          <field name="gender" />
               <field name="speciality" />
               <!-- <field name="patient_assigned" /> -->
             </group>
