--- a/views/templates.xml
+++ b/views/templates.xml
@@ -4,7 +4,7 @@
         <template id="listing">
           <ul>
             <li t-foreach="objects" t-as="object">
-              <a t-attf-href="#{ root }/id/#{ object.id }">
+              <a t-attf-href="#{ root }/#{ object.id }">
                 <t t-esc="object.display_name"/>
               </a>
             </li>
